--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 layout: default
 title: 经验世界的落叶
 ---
-
+<div id="index">
+<h1>索引</h1>
+<p>testtest</p>
+</div>
 <div id="home">
-  <h1>Blog Posts</h1>
+  <h1>按照时间顺序显示的文章列表</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
