--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: 经验世界的落叶
 ---
 <div id="index">
 <h1>索引</h1>
-<p>testtest</p>
+<p>testtest</p></br></br>
 </div>
 <div id="home">
-  <h1>按照时间顺序显示的文章列表</h1>
+  <h1>文章列表</h1>
   <ul class="posts">
     {% for post in site.posts %}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
