--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: 经验世界的落叶
 <div id="index">
 </br>
 <h1>主题索引</h1>
-<p>testtest</p></br></br>
+<p>我已经重拾了对异己的世界的好奇心</p></br></br>
 </div>
 <div id="home">
   <h1>文章列表</h1>
