--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@ title: 经验世界的落叶
 <div id="index">
 </br>
 <h1>主题索引</h1>
-<p>我已经重拾了对异己的世界的好奇心</p></br></br>
+<p>我已经重拾了对异己的世界的好奇心，因为不满足于知道
+方法论
+中国的乡土社会生活和心灵的变迁，城市生活景观，
+  人格  记忆  语言   报告
+</p></br></br>
 </div>
 <div id="home">
   <h1>文章列表</h1>
