--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: 经验世界的落叶
 <p>我已经重拾了对异己的世界的好奇心，因为不满足于知道
 方法论
 中国的乡土社会生活和心灵的变迁，城市生活景观，
-  人格  记忆  语言   报告
+  人格  记忆  语言   报告  记忆与经验的关系，因为注意到一个问题：阅读、经历 如何转化成经验？必然经过记忆。但是
 </p></br></br>
 </div>
 <div id="home">
