--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@ title: 经验世界的落叶
 <div id="index">
 </br>
 <h1>主题索引</h1>
-<p>我已经重拾了对异己的世界的好奇心，因为不满足于知道
-方法论
-中国的乡土社会生活和心灵的变迁，城市生活景观，
-  人格  记忆  语言   报告  记忆与经验的关系，因为注意到一个问题：阅读、经历 如何转化成经验？必然经过记忆。但是
+<p>我已经重拾了对异己的世界的好奇心，因为先得理解异己的世界，才能反过来理解自己。我称为“经验世界”的东西，正是这他人的世界，因为无法借助书斋里的公理演绎得以理解，必须经由经验、观察和感同身受来靠近。这像是社会学和人类学家的工作，然而我有特殊的<a href=3.1415926.net/method>方法论和关注领域</a>，就是关注人的生存经验-语言（方言）-人格-观念之间的互动。基于此，我关注中国乡土社会和心灵的变迁，也有志于理解城市生活的景观，包括探究消费者市场背后的经验-语言-人格-观念链条。</br>
+之所以重视这一链条，是因为我把它看作人的精神世界的基本结构。我想要挖掘人的心灵领域的丰富内涵，探索罪、情欲、软弱、骄傲，以及爱、自由、希望和拯救。以此沟通天国的福音与现代人的心灵，这是作为基督门徒的美好职分。
 </p></br></br>
 </div>
 <div id="home">
