--- a/method/index.html
+++ b/method/index.html
@@ -4,6 +4,7 @@ title: 目的、方法和关注
 ---
 
 <div id="home">
+  <p>test</p>
   <h1>Blog Posts</h1>
   <ul class="posts">
     {% for post in site.posts %}
