--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: 他人世界的落叶
 <div id="index">
 </br>
 <h1>导航图</h1>
-<p>　　言辞是灵魂的影子，所以透过遣词造句就可以洞悉灵魂的模样。这正是我借以<a href=/method>探索异己世界的方法</a>，就是首先编纂出一个人或者一群人的词典，这词典折射出他们灵魂的结构、偏重和质地；然后确定这词典在世界上所有词典中所处的位置，就可以知道这一个人或一群人的灵魂在人世间所处的位置。除了上述描述性的探究，更为要紧的是解释，就是解释为什么这一个人或这一群人的灵魂是此种样式。我把它分解为若干小的问题，包括人的生存经验如何塑造（或者说限制）了他的语言、人格和观念？承袭/学习而来的语言，如何限定了此人看待和表述世界的方式，从而限定了他的性情和命运？进而，，基于此，我关注<a href=/rural>中国乡土社会和心灵的变迁</a>，也有志于理解<a href=/urban>城市生活的景观</a>，包括探究<a href=/consumer>消费者市场背后的经验-语言-人格-观念链条</a>。</br>
+<p>　　言辞是灵魂的影子，所以透过遣词造句就可以洞悉灵魂的模样。这正是我借以<a href=/method>探索异己世界的方法</a>，就是首先编纂出一个人或者一群人的词典，这词典折射出他们灵魂的结构、偏重和质地；尔后确定这词典在世界上所有词典中所处的位置，就可以知道这一个人或一群人的灵魂在人世间所处的位置。除了上述描述性的探究，更为要紧的是解释，就是解释为什么这一个人或这一群人的灵魂是此种样式。这可以分解成若干个小问题，即人的生存经验如何塑造（或者说限制）了他的语言、人格和观念？承袭/学习而来的语言，如何限定了此人看待和表述世界的方式，从而限定了他的性情和命运？进而，，基于此，我关注<a href=/rural>中国乡土社会和心灵的变迁</a>，也有志于理解<a href=/urban>城市生活的景观</a>，包括探究<a href=/consumer>消费者市场背后的经验-语言-人格-观念链条</a>。</br>
 　　之所以重视这一链条，是因为我把它看作人的精神世界的基本结构。我想要挖掘人的心灵领域的丰富内涵，探索罪、情欲、软弱、骄傲，以及爱、自由、希望和拯救；以此沟通<a href=/goodnews>天国的福音与现代人的心灵</a>，这是作为基督门徒的美好职分。
 </p></br></br>
 </div>
