--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@ title: 他人世界的落叶
 <div id="index">
 </br>
 <h1>导航图</h1>
-<p>　　言辞是灵魂的影子，所以透过遣词造句可以洞悉灵魂的模样。这正是我借以探索异己世界的<a href=/method>方法</a>，就是首先编纂出一个人或者一群人的词典，这词典折射出他们灵魂的结构、偏重和质地；尔后确定这词典在世界上所有词典中所处的位置，就可以知道这一个人或一群人的灵魂在人世间所处的位置。除了上述描述性的探究，更为要紧的是解释，就是解释为什么这一个人或这一群人的灵魂是此种样式。这可以分解成若干个小问题，即人的生存经验如何塑造（或者说限制）了他的语言、人格和观念？承袭/学习而来的语言，如何限定了此人看待和表述世界的方式，从而限定了他的性情和命运？进而，使用何种人格结构模型来解读其人的人格特征？我的关注领域有<a href=/rural>中国乡土社会和心灵的变迁</a>，也有志于理解<a href=/urban>城市生活的景观</a>，</br>
+<p>　　言辞是灵魂的影子，所以透过遣词造句可以洞悉灵魂的模样。这正是我借以探索异己世界的<a href=/method>方法</a>，就是首先编纂出一个人或者一群人的词典，这词典折射出他们灵魂的结构、偏重和质地；尔后确定这词典在世界上所有词典中所处的位置，就可以知道这一个人或一群人的灵魂在人世间所处的位置。除了上述描述性的探究，更要紧的是解释，就是解释为什么这一个人或这一群人的灵魂是此种样式。这可以分解成若干小问题，即人的生存经验如何塑造（或者说限制）了他的语言、人格和观念？承袭/学习而来的语言，如何限定了此人看待和表述世界的方式，从而限定了他的性情和命运？进而，使用何种关于人格结构的假说来解读其人的人格特征？
+</br>　　近期关注较多的主题是<a href=/rural>中国乡土社会和心灵的变迁</a>，未来会关注一些<a href=/urban>城市文化</a>。很喜欢借助微博等社会化媒体观察人的言语、心灵和现实生活。</br>
 　　我有自己的灵魂词典，就是《圣经》，其中的关键词是罪、情欲、软弱、骄傲，以及爱、自由、希望和拯救，这些词语组成了对于人类灵魂领域的最深刻的阐释，也彰显了神国的福音，就是<a href=/goodnews>重生复活的道</a>。
 </p></br></br>
 </div>
