--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@ title: 他人世界的落叶
 <div id="index">
 </br>
 <h1>导航图</h1>
-<p>　　确定合适的概念是最要紧的事。我用以解释他人世界的基本概念是记忆，经验，语词，人格和观念。可以把其他的概念化约为这5个概念中的一个。这5个概念可以细分为有限个数的维度或者说面向，所以我的方法就是去考察一个人在记忆，经验，语词，人格和观念的各个维度/面向上的面貌，并与其他人的相比较，以此达到对人的灵魂世界的理解。
+<p>　　有观点认为语言塑造心智，所以不同的语种就意味着不同的世界。我以为这还不够，因为即便是使用同一个语种，各人都有自己的私人语言系统，这主要是由于各人有各人的词典，词典之间的差异之处，在于它们收纳了不同的词语，即便是相同的词语，在不同词典里面的地位也不同。
+确定合适的概念是最要紧的事。我用以解释他人世界的基本概念是记忆，经验，语词，人格和观念。可以把其他的概念化约为这5个概念中的一个。这5个概念可以细分为有限个数的维度或者说面向，所以我的方法就是去考察一个人在记忆，经验，语词，人格和观念的各个维度/面向上的面貌，并与其他人的相比较，以此达到对人的灵魂世界的理解。
 </p></br></br>
 </div>
-<div id="home">
+<div id="home"
   <h1>文章列表</h1>
   <ul class="posts">
     {% for post in site.posts %}
